--- a/web/winter_project/templates/base.html
+++ b/web/winter_project/templates/base.html
@@ -64,7 +64,7 @@
         <header class="py-3 mb-5 text-center bg-dark shadow">
             <nav class="navbar navbar-expand-lg navbar-light" >
                 <div class="container-fluid">
-                    <a class="navbar-brand" style="font-size: xx-large; color:white ;" href="/survival_analysis/main">Cancer Detect Web</a>
+                    <a class="navbar-brand" style="font-size: xx-large; color:white ;" href="/survival_analysis/main">Winter Project Web</a>
                     
                     <button class=" navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: gray;">
                         <span class="navbar-toggler-icon"></span>
