--- a/web/winter_project/templates/enrichment.html
+++ b/web/winter_project/templates/enrichment.html
@@ -28,6 +28,7 @@
             <option value="0.05">0.05</option>
             <option value="0.01">0.01</option>
             <option value="0.001">0.001</option>
+            <option value="0.00001">0.00001</option>
         </select>
     </div>
 </div><br>
